crates/llvmkit-ir/tests/compile_fail/function_pass_requires_verified.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/function_pass_requires_verified.rs:13:25
   |
13 |         let _ = fpm.run(&module, function, &mut fam);
   |                     --- ^^^^^^^ expected `Module<'_, Brand<'_>, Verified>`, found `&Module<'_>`
   |                     |
   |                     arguments to this method are incorrect
   |
   = note: expected struct `Module<'_, Brand<'_>>`
           found reference `&Module<'_, Brand<'_>>`
note: method defined here
  --> src/pass_manager.rs
   |
   |     pub fn run(
   |            ^^^
